[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/title.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/monogram.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/fonts/monogram-extended.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=2]
size = 35
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=1]
size = 72
outline_size = 5
outline_color = Color( 0.823529, 0.619608, 0.619608, 1 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 35
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 3 )

[node name="StartGame" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enable = true

[node name="StartButton" type="Button" parent="CanvasLayer"]
margin_left = 171.0
margin_top = 489.0
margin_right = 448.0
margin_bottom = 561.0
custom_fonts/font = SubResource( 2 )
text = "Start Game"

[node name="Title" type="Label" parent="CanvasLayer"]
margin_left = 109.0
margin_top = -123.0
margin_right = 491.0
margin_bottom = 56.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Couple Card Game"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true

[node name="ExitButton" type="Button" parent="CanvasLayer"]
margin_left = 172.0
margin_top = 592.0
margin_right = 449.0
margin_bottom = 664.0
custom_fonts/font = SubResource( 3 )
text = "Exit Game"

[node name="VersionInfo" type="Label" parent="CanvasLayer"]
margin_left = 8.0
margin_top = 770.0
margin_right = 205.0
margin_bottom = 811.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
valign = 1

[node name="heartSpawnTimer" type="Timer" parent="."]
wait_time = 1.3

[node name="heartDestroyTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="heartClearTimer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="pressed" from="CanvasLayer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="CanvasLayer/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="timeout" from="heartSpawnTimer" to="." method="_on_heartSpawnTimer_timeout"]
[connection signal="timeout" from="heartDestroyTimer" to="." method="_on_heartDestroyTimer_timeout"]
[connection signal="timeout" from="heartClearTimer" to="." method="_on_heartClearTimer_timeout"]
